--- a/src/app/core/pages/destacados/destacados.component.html
+++ b/src/app/core/pages/destacados/destacados.component.html
@@ -1,31 +1,46 @@
 <div class="container">
 
-    <h1>{{titulo}}</h1>
+    <h1>{{titulo}} / {{ pais }}</h1>
 
-    <div class="proximos-dias-card">
-        <mat-card *ngFor="let clima of datosProximosDias; index as i" class="col-12 col-sm-6 col-md-4 col-lg-3 tarjeta">
-            <div>{{clima.applicable_date | date : 'mediumDate'}}</div>
+    <div class="hoy-card">
+        <mat-card class="tarjetaTemperatura">
 
-            <div class="icono">
-                <i [class]="iconos[i]"></i>
+            <div class="tarjeta">
+
+                <div>Temperatura máxima</div>
+                <div class="icono">
+                    <i class="fas fa-temperature-high"></i>
+                </div>
+                <div class="contenedor-info">
+                    <strong class="tarjeta-info"> {{datosHoy['main']['temp_max']}} </strong>
+                    <span> C°</span>
+                </div>
+
             </div>
+            <div class="tarjeta">
 
-            <div>
-                <span>{{ clima.max_temp | number: '0.0-0'}}°C </span>
-                <span>{{ clima.min_temp | number: '0.0-0'}}°C</span>
+                <div>Temperatura mínima</div>
+                <div class="icono">
+                    <i class="fas fa-temperature-low"></i>
+                </div>
+                <div class="contenedor-info">
+                    <strong class="tarjeta-info"> {{datosHoy['main']['temp_min']}} </strong>
+                    <span> C°</span>
+                </div>
+
             </div>
         </mat-card>
-
     </div>
 
-    <h1>Destacados de hoy</h1>
+
+    <h2>Informacion sobre el clima:</h2>
 
     <div class="hoy-card">
 
         <mat-card class="tarjetaHoy">
             <div>Estado del Viento</div>
             <div class="contenedor-info">
-                <strong class="tarjeta-info"> {{ datosHoy['wind_speed'] | number: '.0-0'}} </strong>
+                <strong class="tarjeta-info"> {{ datosHoy['wind']['speed'] | number: '.0-2'}} </strong>
                 <span> kph</span>
             </div>
         </mat-card>
@@ -33,7 +48,7 @@
         <mat-card class="tarjetaHoy">
             <div>Humedad</div>
             <div class="contenedor-info">
-                <strong class="tarjeta-info"> {{ datosHoy['humidity']}} </strong>
+                <strong class="tarjeta-info"> {{ datosHoy['main']['humidity']}} </strong>
                 <span> %</span>
             </div>
         </mat-card>
@@ -52,10 +67,11 @@
         <mat-card class="tarjetaHoy">
             <div>Presión del aire</div>
             <div class="contenedor-info">
-                <strong class="tarjeta-info">{{ datosHoy['air_pressure'] }}</strong>
+                <strong class="tarjeta-info">{{ datosHoy['main']['pressure'] }}</strong>
                 <span> mb</span>
             </div>
         </mat-card>
+
 
     </div>
 
