--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,4 @@
 html, body { height: 100%; background-color : #030416;  }
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-h1, span{ color: white}
+h1, h2, span{ color: white}
