--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -34,18 +34,19 @@
 
             </div>
 
-            <div class="contenedor-sidebar" *ngIf="mostrarInfo">
+            <div class="contenedor-sidebar">
 
                 <div class="icono">
-                    <i [class]="iconos[0]"></i>
+                    <i [class]="icono"></i>
                 </div>
                 <div>
-                    <strong class="temperatura-numero">{{datosHoy['the_temp'] | number: '.0-0'}}</strong>
+                    <strong class="temperatura-numero">{{datosHoy['main']['temp'] | number: '.0-1'}}</strong>
                     <span> °C</span>
                 </div>
 
                 <div class="temperatura-texto">
-                    {{datosHoy['weather_state_name']}}
+                    {{datosHoy['weather'][0]['description'] | titlecase}}
+
                 </div>
 
                 <div class="footer">
@@ -66,7 +67,7 @@
             <i class="fas fa-bars"></i>
         </button>
 
-        <app-destacados *ngIf="!mostrarError" [titulo]="titulo" [datosHoy]="datosHoy" [datosProximosDias]="datosProximosDias" [iconos]="iconos">
+        <app-destacados *ngIf="!mostrarError" [titulo]="titulo" [pais]="pais" [datosHoy]="datosHoy">
         </app-destacados>
 
         <mat-card *ngIf="mostrarError">No se encontró resultados</mat-card>
